--- a/.github/workflows/java-platform-prime.yml
+++ b/.github/workflows/java-platform-prime.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Build and push image
         uses: docker/build-push-action@v6
         with:
-          context: ./java-platformprime
+          context: ./java-platform-prime
           platforms: linux/amd64, linux/arm64
           file: ./java-platform-prime/${{ matrix.tag }}/Dockerfile
           push: true
